# amplitude_downloader

./: .env example  .gitignore  README.md  amplitude.py  logger_config.py  main.py  pyproject.toml  s3_client.py
.github/workflows/: deploy.yml
